# ascii-smth

./: CMakeLists.txt  CMakeUserPresets.json  README.md  setupenv.ps1  vcpkg.json
src/: brainrot.h  main.cpp
